--- a/index.html
+++ b/index.html
@@ -29,21 +29,27 @@
     </div>
   </header>
   <section class="hero" id="hero">
-    <div class="card">
-      <h1>Оригинальные запчасти для Белаз</h1>
-      <span>с бесплатной доставкой в Ваш город!</span>
-      <div class="advantages">
-        <div class="adv-item"><img src="img/piggy-bank.png" alt="">
-          <span>Дилерские цены - ниже на 20%, работаем без посредников!</span>
-        </div>
-        <div class="adv-item"><img src="img/truck.png" alt="">
-          <span>Срочная бесплатная доставказа 7 дней</span>
-        </div>
-        <div class="adv-item"><img src="img/calendar.png" alt="">
-          <span>Даем рассрочку 6 месяцев</span>
-        </div>
-        <div class="adv-item"><img src="img/medal.png" alt="">
-          <span>Даем гарантию от 12 месяцев</span>
+    <div class="container">
+      <div class="card">
+        <h1>Оригинальные запчасти <br> для Белаз</h1>
+        <span class="tagline">с бесплатной доставкой в Ваш город!</span>
+        <div class="advantages">
+          <div class="adv-item">
+            <img src="img/piggy-bank.png" width="25px" height="30px" alt="">
+            <span>Дилерские цены - ниже на 20%, работаем без посредников!</span>
+          </div>
+          <div class="adv-item">
+            <img src="img/truck.png" width="30px" height="25px" alt="">
+            <span>Срочная бесплатная доставказа 7 дней</span>
+          </div>
+          <div class="adv-item">
+            <img src="img/calendar.png" width="30px" height="30px" alt="">
+            <span>Даем рассрочку 6 месяцев</span>
+          </div>
+          <div class="adv-item">
+            <img src="img/medal.png" width="25px" height="30px" alt="">
+            <span>Даем гарантию от 12 месяцев</span>
+          </div>
         </div>
       </div>
     </div>
