have-to-wait section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <span class="phone-num">+7 (818) 247-47-25</span>
             <span class="phone-num">+7(818) 247-47-25</span>
           </div>
-          <a href="" class="btn">Заказать звонок</a>
+          <a href="" class="btn btn-blue">Заказать звонок</a>
         </div>
       </div>
     </div>
@@ -50,6 +50,46 @@
             <img src="img/medal.png" width="25px" height="30px" alt="">
             <span>Даем гарантию от 12 месяцев</span>
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="hero-fb" id="hero-fb">
+    <div class="container">
+      <form action="thank-you.html">
+        <legend>Получите прайс прямо сейчас<br>на электронную почту!</legend>
+        <input type="email" placeholder="Введите ваш e-mail">
+        <input type="phone" placeholder="Введите ваш телефон">
+        <div class="desc">
+          <span>Прайс придет к Вам на почту<br>в течение 5 минут!</span>
+          <img src="img/clock.png" alt="clock">
+        </div>
+        <button href="" class="btn btn-blue">Получить прайс</button>
+      </form>
+    </div>
+  </section>
+  <section class="have-to-wait" id="have-to-wait">
+    <div class="container have-to-wait-container">
+      <h2>Вам не придется ждать!</h2>
+      <p>
+        Любые запчасти для всех моделей Белаз <br> всегда в наличии!
+      </p>
+      <div class="adv-wrap">
+        <div class="adv-item">
+          <img width="95px" height="100px" src="img/engine.png" alt="">
+          <p>Любые типы деталей <br> от шайбы до двигателя! </p>
+        </div>
+        <div class="adv-item">
+          <img width="100px" height="90px" src="img/dump-truck.png" alt="">
+          <p>Все модификации Белаз<br>от 45т до 450 т</p>
+        </div>
+        <div class="adv-item">
+          <img width="100px" height="90px" src="img/second-calendar.png" alt="">
+          <p>Отгружаем в день заказа!</p>
+        </div>
+        <div class="adv-item">
+          <img width="95px" height="95px" src="img/location.png" alt="">
+          <p>Доставим в любое место!</p>
         </div>
       </div>
     </div>
