--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <span>Прайс придет к Вам на почту<br>в течение 5 минут!</span>
           <img src="img/clock.png" alt="clock">
         </div>
-        <button href="" class="btn btn-blue">Получить прайс</button>
+        <button type="submit" href="" class="btn btn-blue">Получить прайс</button>
       </form>
     </div>
   </section>
@@ -92,6 +92,20 @@
           <p>Доставим в любое место!</p>
         </div>
       </div>
+    </div>
+  </section>
+  <section class="specific-item" id="specific-item">
+    <div class="container specific-item-container">
+      <h2>Ищете конкретную деталь?</h2>
+      <p>Если у Вас есть артикул - введите его в поле ниже и получите цену<br>ПРЯМО СЕЙЧАС!</p>
+      <form action="thank-you.html">
+        <input type="text" placeholder="Введите артикул детали">
+        <input type="text" placeholder="Введите ваш телефон">
+        <button type="submit" class="btn btn-yellow">Узнать цену</button>
+      </form>
+      <span>Мы перезвоним вам в течение 3 минут и назовем цену детали!</span>
+      <span>Или Вы можете перезвонить нам сами:</span>
+      <span class="phone">+7 (818) 247-47-25</span>
     </div>
   </section>
 </body>
