--- a/index.html
+++ b/index.html
@@ -131,6 +131,66 @@
       </div>
     </div>
   </section>
+  <section class="comfy-work">
+    <div class="container comfy-work-container">
+      <h2>С нами удобно работать!</h2>
+      <span>Более 70% клиентов приходят к нам по рекомендации!</span>
+      <div class="comfy-items-wrap">
+        <div class="comfy-item">
+          <div class="img img-1"></div>
+          <p>Вы вносите предоплату в размере 50% от стоимости запчасти</p>
+        </div>
+        <div class="comfy-item">
+          <div class="img img-2"></div>
+          <p>Отправляем запчасти в день заказа</p>
+        </div>
+        <div class="comfy-item">
+          <div class="img img-3"></div>
+          <p>Получаете деталь, проверяете, оплачиваете оставшиеся 50%</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="storage" id="storage">
+    <div class="container storage-container">
+      <h2>У нас собственный склад!</h2>
+      <p>Это позволяет нам быстро обрабатывать запросы и отгружать детали <br> в день заказа!</p>
+      <div class="img-wrap">
+        <div class="img img-1"></div>
+        <div class="img img-2"></div>
+        <div class="img img-1"></div>
+        <div class="img img-2"></div>
+      </div>
+    </div>
+  </section>
+  <section class="services" id="services">
+    <div class="container services-container">
+      <h2>У нас в штате есть мобильные бригады, <br>готовые выехать на сервисное обслуживание, <br> ремонт и проведение
+        диагностики!
+      </h2>
+      <div class="services-wrap">
+        <div class="service-item">
+          <div class="img img-1"></div>
+          <p>Организуем выезд специалистов в течение двух дней</p>
+        </div>
+        <div class="service-item">
+          <div class="img img-2"></div>
+          <p>Бригады укомплектованы всем необходимым оборудованием для производства работ любой сложности</p>
+        </div>
+        <div class="service-item">
+          <div class="img img-3"></div>
+          <p>Все специалисты проходят обучение и ежегодную аттестацию</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-migrate-3.1.0.min.js"
+    integrity="sha256-ycJeXbll9m7dHKeaPbXBkZH8BuP99SmPm/8q5O+SbBc=" crossorigin="anonymous"></script>
+  <script src="js/slick.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
