--- a/index.html
+++ b/index.html
@@ -184,7 +184,36 @@
       </div>
     </div>
   </section>
-
+  <section class="consult" id="consult">
+    <div class="container consult-container">
+      <h2>Если Вам необходима бесплатная консультация по вопросу обслуживания</h2>
+      <p>Звоните нам по телефону:</p>
+      <span>+7 (818) 247-47-25</span>
+      <form action="thank-you.html">
+        <input type="phone" placeholder="Введите ваш телефон">
+        <button type="submit" class="btn btn-yellow">Перезвонить сейчас</button>
+      </form>
+    </div>
+  </section>
+  <section class="invation" id="invation">
+    <div class="container invation-container">
+      <h2>Приезжайте в наш офис!</h2>
+      <p>г. Архангельск, Москва-Сити, оф. 3725</p>
+      <span>+7 (818) 247-47-25</span>
+    </div>
+  </section>
+  <footer class="footer" id="footer">
+    <div class="container footer-container">
+      <img src="/img/logo.png" alt="logo">
+      <div class="author">
+        © 2019, <a href="">kalispeller</a>
+      </div>
+      <div class="phone">
+        <p>Есть вопросы? Звоните!</p>
+        <span>+7 (818) 247-47-25</span>
+      </div>
+    </div>
+  </footer>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-migrate-3.1.0.min.js"
