--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header class="header" id="header">
-    <div class="container">
+    <div class="container header-container">
       <div class="brand"><img src="img/logo.png" alt="logo"></div>
       <div class="content-wrap">
         <div class="working-mode">
